--- a/contacts.html
+++ b/contacts.html
@@ -21,10 +21,7 @@
         <a href="index.html" class="header__logo mobile">
             <img src="img/svgicons/logo.svg" alt="logo">
         </a>
-        <div class="header__burger">
-            <span></span>
-        </div>
-        <nav class="header__menu">
+        <div class="header__icons mobile">
             <div class="header__search">
                 <button class="header__icon btn-search">
                     <img src="img/svgicons/search.svg" alt="search">
@@ -43,15 +40,72 @@
                     </div>
                 </form>
             </div>
-            <a href="#" class="header__link">Lighting</a>
+            <a href="#" class="header__icon">
+                <img src="img/svgicons/favorite.svg" alt="favorite">
+            </a>
+            <a href="#" class="header__icon ">
+                <img src="img/svgicons/cart.svg" alt="cart">
+            </a>
+        </div>
+        <div class="header__burger">
+            <span></span>
+        </div>
+        <nav class="header__menu">
+            <div class="header__search pc">
+                <button class="header__icon btn-search">
+                    <img src="img/svgicons/search.svg" alt="search">
+                </button>
+                <form action="#" class="dialogbox dialogbox-search">
+                    <input type="search" placeholder="Search...">
+                    <p>Recents view</p>
+                    <div class="flex">
+                        <a href="#">Link</a>
+                        <a href="#">Link</a>
+                        <a href="#">Link</a>
+                        <a href="#">Link</a>
+                    </div>
+                    <div class="close-btn dialogbox__close">
+                        <img src="img/svgicons/close.svg" alt="close">
+                    </div>
+                </form>
+            </div>
+            <div class="dropdown-container">
+                <a href="#" class="header__link">Lightning</a>
+                <div class="dropdown-container__hidden">
+                    <div class="dropdown-container__row">
+                        <div class="dropdown-container__item">
+                            <a href="#" class="dropdown-container__category">Category</a>
+                            <nav>
+                                <a href="#">Lamp</a>
+                                <a href="#">Lamp</a>
+                                <a href="#">Lamp</a>
+                                <a href="#">Lamp</a>
+                                <a href="#">Lamp</a>
+                                <a href="#">Lamp</a>
+                            </nav>
+                        </div>
+                        <div class="dropdown-container__item">
+                            <a href="#" class="dropdown-container__category">Category</a>
+                            <nav>
+                                <a href="#">Lamp</a>
+                                <a href="#">Lamp</a>
+                                <a href="#">Lamp</a>
+                                <a href="#">Lamp</a>
+                                <a href="#">Lamp</a>
+                                <a href="#">Lamp</a>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <a href="#" class="header__link">Contact</a>
             <a href="index.html" class="header__logo pc">
                 <img src="img/svgicons/logo.svg" alt="logo">
             </a>
-            <a href="#" class="header__icon">
+            <a href="#" class="header__icon pc">
                 <img src="img/svgicons/favorite.svg" alt="favorite">
             </a>
-            <a href="#" class="header__icon">
+            <a href="#" class="header__icon pc">
                 <img src="img/svgicons/cart.svg" alt="cart">
             </a>
             <a href="#" class="header__link">Account</a>
@@ -60,7 +114,7 @@
 </header>
 
             <main class="content">
-                <section class="contacts block-half">
+                <section class="contacts block-half section">
                     <div class="container">
                         <div class="block-half__row">
                             <form action="#" class="block-half__text contacts__form">
@@ -88,7 +142,6 @@
                                     required
                                 >
                                 <input type="tel" name="phone" placeholder="Phone Number">
-                                <input type="text" name="country" placeholder="Country">
                                 <input type="text" name="reason" placeholder="Contact reason">
                                 <textarea name="comment" placeholder="Message"></textarea>
                                 <label class="checkbox">
@@ -104,6 +157,16 @@
                                     </p>
                                 </label>
                                 <button type="submit" class="btn">Отправить</button>
+                                <footer class="block-social">
+                                    <a href="tel:7(999)999-99-88">
+                                        <img src="img/svgicons/phone.svg" alt="phone">
+                                        +7 (999) 999-99-88
+                                    </a>
+                                    <a href="mailto:example@mail.ru">
+                                        <img src="img/svgicons/mail.svg" alt="mail">
+                                        example@mail.ru
+                                    </a>
+                                </footer>
                             </form>
                             <div class="block-half__image">
                                 <img src="img/index/lamps.png" alt="">
@@ -118,7 +181,6 @@
             <nav class="footer__nav">
                 <h2>Support</h2>
                 <a href="#">FAQs</a>
-                <a href="#">Where to buy</a>
                 <a href="#">Contact us</a>
                 <a href="#">Privacy policy and cookies</a>
             </nav>
